# Industry-Project

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260419_0001_init.py
app/: main.py
app/api/: deps.py
app/api/v1/routes/: executions.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  audit_log.py  execution.py
app/repositories/: audit_repository.py  execution_repository.py
app/schemas/: audit_log.py  execution.py
app/services/: audit_service.py  execution_service.py
